# demografia-espana

./: app.py  provincias.geojson  pyproject.toml  requirements.txt
data/csv/: alquiler_serie.csv  alquiler_ultimo.csv  compraventas_serie.csv  compraventas_ultimo.csv  crecimiento_serie.csv  crecimiento_ultimo.csv  dependencia_serie.csv  dependencia_ultimo.csv  envejecimiento_serie.csv  envejecimiento_ultimo.csv  hipotecas_serie.csv  hipotecas_ultimo.csv  inmigracion_serie.csv  inmigracion_ultimo.csv  ipv_serie.csv  ipv_ultimo.csv  mortalidad_serie.csv  mortalidad_ultimo.csv  natalidad_serie.csv  natalidad_ultimo.csv  pct_65_serie.csv  pct_65_ultimo.csv  saldo_migratorio_serie.csv  saldo_migratorio_ultimo.csv  viviendas_turisticas_serie.csv  viviendas_turisticas_ultimo.csv
data/espana/csv/: dependencia_ultimo.csv  envejecimiento_serie.csv  mortalidad_serie.csv  mortalidad_ultimo.csv  pct_65_serie.csv  pct_65_ultimo.csv
data/europa/csv/: edad_fecundidad_ue.csv
demografia/: data.py
docs/: 1.md
reports/: alquiler.md  compraventas.md  crecimiento.md  dependencia.md  envejecimiento.md  hipotecas.md  index.md  informe_demografico.md  inmigracion.md  ipv.md  mortalidad.md  natalidad.md  pct_65.md  saldo_migratorio.md  viewer.html  viviendas_turisticas.md
scripts/: generate_reports.py
src/: charts.py  ine.py  provinces.py
src/maps/: provinces.py
src/sources/ine/: client.py  demografia.py  inmigracion.py  vivienda.py
